--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             integrity="sha512-xodZBNTC5n17Xt2a0I4N1q1HlpffHL+cQh6skTe4yRgD6eKz6+T1iXlONHjLM0sGG6jRDI6C//E9fJ0AQXh2Cg=="
             crossorigin=""
     />
-
+    <link rel="icon" type="image/x-icon" href="/logo.png">
 
     <title>Rootteam</title>
 </head>
